--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,7 @@
             "skipFiles": [
                 "<node_internals>/**"
             ],
-            "program": "${workspaceFolder}/app.mjs",
+            "program": "${workspaceFolder}/app.ts",
             "args": [
                 "bookings",
                 "2022",
@@ -28,7 +28,7 @@
             "skipFiles": [
                 "<node_internals>/**"
             ],
-            "program": "${workspaceFolder}/app.mjs",
+            "program": "${workspaceFolder}/app.ts",
             "args": [
                 "customer",
                 "***REMOVED***",
