--- a/package.json
+++ b/package.json
@@ -7,5 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Chris Miner",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "commander": "^9.2.0",
+    "square": "^18.0.0"
+  }
 }
