moved app dependencies from dev  added typescript dev

--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
   },
   "author": "Chris Miner",
   "license": "ISC",
-  "devDependencies": {
+  "dependencies": {
     "commander": "^9.2.0",
     "square": "^18.0.0"
+  },
+  "devDependencies": {
+    "typescript": "^4.6.4"
   }
 }
