--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "commander": "^9.2.0",
+    "dotenv": "^16.0.1",
     "square": "^18.0.0"
   },
   "devDependencies": {
