--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,9 +5,9 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "name": "Launch Bookings",
             "type": "node",
             "request": "launch",
-            "name": "Launch Bookings",
             "skipFiles": [
                 "<node_internals>/**"
             ],
@@ -24,9 +24,9 @@
             "envFile": "${workspaceFolder}/.env",
         },
         {
+            "name": "Launch Customer",
             "type": "node",
             "request": "launch",
-            "name": "Launch Customer",
             "skipFiles": [
                 "<node_internals>/**"
             ],
@@ -37,24 +37,11 @@
             "preLaunchTask": "tsc: build - tsconfig.json",
             "args": [
                 "customer",
-                "***REMOVED***",
-            ]
-        },
-        {
-            "type": "node",
-            "request": "launch",
-            "name": "Launch NT",
-            "skipFiles": [
-                "<node_internals>/**"
+                "-d",
+                "email@gmail.com"
             ],
-            "program": "${workspaceFolder}/src/zen.ts",
-            "outFiles": [
-                "${workspaceFolder}/dist/**/*.js"
-            ],
-            "preLaunchTask": "tsc: build - tsconfig.json",
-            "args": [
-                "nt",
-            ],
+            // "envFile": "${workspaceFolder}/.env",
+            // "outputCapture": "std"
         },
         {
             "type": "node",
