added env file and alternate output to customer launch target.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -40,8 +40,8 @@
                 "-d",
                 "email@gmail.com"
             ],
-            // "envFile": "${workspaceFolder}/.env",
-            // "outputCapture": "std"
+            "envFile": "${workspaceFolder}/.env",
+            "outputCapture": "std"
         },
         {
             "type": "node",
